--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,11 @@
 
     <string name="menu_home">Список книг</string>
     <string name="menu_reading_process">Чтение(процесс)</string>
-    <string name="menu_slideshow">Статистика</string>
+    <string name="menu_statistics">Статистика</string>
     <string name="ImageView_contentDescription_book_cover">Изображение обложки книги</string>
     <string name="textView_book_title_plug">Наименование книги...</string>
     <string name="textView_authors_of_the_book_plug">Автор или авторы книги</string>
     <string name="textView_book_status_plug">Статус прочтения книги</string>
     <string name="ImageView_contentDescription_sign_of_approval">Иконкф-Флаг признак одобрения</string>
+    <string name="menu_bookDetailsFragment">Информацция о книге</string>
 </resources>
