Изм 1.5 main-fragment - создан стартовый фрагмент - настроена работа над отображением аватара, фона аватара и кастомного фона пользователя - подключен график - пончик - реализована передача данных во вью. Пока все очень просто с жесткими привязками и с явными ограхами без внедрения зависимостей и четкого разделения по слоям - ччтобы работало.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,7 @@
     <string name="settings_title">Общие настройки</string>
     <string name="name_title">Имя пользователя</string>
     <string name="surname_title">Фамилия</string>
+    <string name="main_fragment_title">Мой прогресс</string>
+    <string name="menu_main">Главная</string>
+    <string name="iv_userListItem_contentDescription">Рамочка вокруг аваатара</string>
 </resources>
