--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="settings_title">Общие настройки</string>
     <string name="name_title">Имя пользователя</string>
     <string name="surname_title">Фамилия</string>
+    <string name="main_curator_title">Основной куратор</string>
 </resources>
