Изм 1.7 - отслеживание событий - добавлен объект событий - добавлен интетфейс API - добавлен RV на главный экран - соответственно созданы адаптер и холдер - создана базовая разметка элемента списка событий - реализован базовый переброс данных через VM из репозитория3 - в репозитории создан метод запроса, но закомментирвоан пока ожидается готовность серверной части - добавлена иконка для холдера событий - внесены соответстувующие изменения в разметку и класс фрагмента главного экрана.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,7 @@
     <string name="main_fragment_title">Мой прогресс</string>
     <string name="menu_main">Главная</string>
     <string name="iv_userListItem_contentDescription">Рамочка вокруг аваатара</string>
+    <string name="textView_event_title_plug">Выполнено такое-то действие</string>
+    <string name="textView_fix_data_event_plug">" день нед. / 15.12.2021 (18:20)"</string>
+    <string name="textView_event_body_plug">Описание события (коротко)</string>
 </resources>
