--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="menu_edit_book_fragment">Редактировать запись (о книге)</string>
     <string name="menu_book_details_fragment">Подробная информация о книге</string>
     <string name="menu_events_list_fragment">Общий список событий</string>
+    <string name="default_text_book_details_activity_graph_title">Активность чтения книги</string>
+    <string name="default_text_book_details_activity_log_title">История чтения книги</string>
 </resources>
