Изм 1.10.8 UI / Работа с API User - модифицирован объект User исправлен для приема данных от сервера в части адреса аватарки и обоев - Модифицирован репозиторий в части реализации получения данных о пользователе с сервера (пока минимальный набор) - модифицированы ViewModel главного фрагмента и сводной статистики в части исключения заглушки данных пользователя и организации получения и передачи данных от репозитория в класс фрагмента. - модифицированы соответствующие классы фрагментов в части запросов и  подписки на получение данных от viewModel (связка выполнена) - часть данных направлены в ресурсы - частично убраны теперь ненужные "магические значения" заглушки, оптимизирован код.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,5 +88,7 @@
     <string name="button_reading_results_close">Закрыть</string>
     <string name="error_process_reading">Произошла ошибка\n%s</string>
     <string name="start_read_book_label">Приступить к чтению</string>
+    <string name="spref_key_login">login</string>
+    <string name="spref_key_login_default">\"\"</string>
     <!-- end process reading fragment area-->
 </resources>
