--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="textView_book_details_duration">1000 страниц</string>
     <string name="textView_book_details_rating">Одобрена папой</string>
     <string name="default_text_book_details_budget">Ориентировочное коичество 100000 слов</string>
-    <string name="default_text_book_details_revenue">Средняя плотнотсь слов на страницу 200</string>
+    <string name="default_text_book_details_revenue">Средняя плотнотсь слов на страницу 250</string>
     <string name="default_text_book_details">Книга запланирована к прочтению в ближайшее время</string>
     <!-- Preference Titles -->
     <string name="main_settings_header">Основные настройки пользователя</string>
@@ -59,4 +59,46 @@
     <string name="menu_events_list_fragment">Общий список событий</string>
     <string name="default_text_book_details_activity_graph_title">Активность чтения книги</string>
     <string name="default_text_book_details_activity_log_title">История чтения книги</string>
+
+    <!-- process reading fragment area-->
+    <string name="text_view_process_reading_book_title">Наименование книги…</string>
+    <string name="text_view_process_reading_book_authors">Автор или авторы книги</string>
+    <string name="text_view_process_reading_pages_count">%s страниц</string>
+    <string name="text_view_process_reading_book_words_count">Ориентировочное коичество %s слов</string>
+    <string name="text_view_process_reading_book_density_words">Средняя плотнотсь слов на страницу %s</string>
+    <string name="text_view_process_reading_book_current_page">Текущая закладка на %s странице</string>
+    <string name="text_view_reading_control_title">Контроль чтения</string>
+    <string name="text_view_process_reading_active_time_title">Время чтения:</string>
+    <string name="text_view_process_reading_relax_time_title">Время отдыха:</string>
+    <string name="text_view_process_reading_active_stopwatch_initial_value">00:00:000</string>
+    <string name="text_view_process_reading_relax_stopwatch_initial_value">00:00:000</string>
+    <string name="button_process_reading_start_text">Начать сеанс чтения</string>
+    <string name="button_process_reading_stop_text">Окончить сеанс чтения</string>
+    <string name="button_process_reading_resume_text">Продолжить чтение</string>
+    <string name="button_process_reading_pause_text">Сделать паузу</string>
+    <string name="dialog_process_reading_enter_bookmark_number">Введите текущий номер страницы</string>
+    <string name="dialog_process_reading_button_enter_bookmark">OK</string>
+    <string name="dialog_process_reading_error_less_than_last">Введенное значение должно быть не меньше, чем номер страницы предыдущего сеанса чтения</string>
+    <string name="dialog_process_reading_error_more_than_pages_count">Введенное значение не должно превышать количества страниц в книге</string>
+    <string name="dialog_process_reading_error_is_empty">Проверьте формат введенного значения. Введенное значение не должно быть пустым.</string>
+    <string name="dialog_text_view_reading_results_title">Статистика чтения</string>
+    <string name="text_view_reading_results_time">Время чтения составило: %s</string>
+    <string name="text_view_reading_results_pages_count">Прочитано страниц: %s</string>
+    <string name="text_view_reading_results_speed">Средняя скорость чтения: %s слов в минуту, %s страниц в минуту</string>
+    <string name="button_reading_results_close">Закрыть</string>
+    <string name="error_process_reading">Произошла ошибка\n%s</string>
+    <string name="start_read_book_label">Приступить к чтению</string>
+    <string name="spref_key_login">login</string>
+    <string name="spref_key_login_default">\"\"</string>
+    <string name="iv_new_book_cover_contentDescription_text">Ихображение обложки книги</string>
+    <string name="btn_start_camera_text">Фотографировать обложку</string>
+    <string name="btn_start_media_text">Выбрать из галереи</string>
+    <string name="btn_crop_image_text">Подрезать</string>
+    <string name="til_new_book_title_hint">Наименование книги</string>
+    <string name="til_new_book_author_hint">Автор(ы) (Фамилия Имя Отчество)</string>
+    <string name="til_new_book_number_of_pages_hint">Страниц</string>
+    <string name="til_new_book_number_of_words_per_page_hint">Слов на странице</string>
+    <string name="til_new_book_total_words_hint">Всего слов</string>
+    <string name="btn_save_new_book_text">Сохранить основные данные</string>
+    <!-- end process reading fragment area-->
 </resources>
