--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,6 @@
     <string name="til_new_book_number_of_words_per_page_hint">Слов на странице</string>
     <string name="til_new_book_total_words_hint">Всего слов</string>
     <string name="btn_save_new_book_text">Сохранить основные данные</string>
+    <string name="fab_base_contentDescription">Основное действие</string>
     <!-- end process reading fragment area-->
 </resources>
