Изм 1.14.3 Complex redesign UI - Полная переделка UI перевод на работу с нижним менб и акцент на работу с 1 кнопкой (90% операций должны будут выполняться нажатием на одну и туже кнопку без проблем с пониманием функционала)  -Убран лишний теперь DriVerLayout, изменен базовый файл разметки для активити  - небольшие изменения.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,5 +101,6 @@
     <string name="til_new_book_total_words_hint">Всего слов</string>
     <string name="btn_save_new_book_text">Сохранить основные данные</string>
     <string name="fab_base_contentDescription">Основное действие</string>
+    <string name="fab_contentDescription">Основное действие</string>
     <!-- end process reading fragment area-->
 </resources>
