--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,5 +109,9 @@
     <string name="tv_body_book_description_default_text">Автор Имя Отчество: + описание книги, небольшое сколько прочиено, сколько осталось</string>
     <string name="tv_bool_name_default_text">Наименование книги</string>
     <string name="tv_book_item_title_header_default_text">ГГГГ / ММ / ДД - прочитано N стр.</string>
+    <string name="iv_unknown_type_sign_content_description">Сигнал о неопознанном типе представления элемента списка</string>
+    <string name="tv_unknown_type_title_default_text">ГГГГ / ДД / ММ - элемент ID такойто</string>
+    <string name="tv_unknown_type_name_default_text">Неизвестный тип элемента списка</string>
+    <string name="tv_unknown_type_body_default_text">Получен не поддерживаемы данным списком тип элемента</string>
     <!-- end process reading fragment area-->
 </resources>
