--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,5 +117,31 @@
     <string name="author_separator_full_name_default_text">Фамилия Имя отчество (автора)</string>
     <string name="author_separator_letter_default_text">A</string>
     <string name="group_separator_title_default_text">Наименование группы</string>
+    <string name="iv_user_custom_bg_contentDescription">Пользовательский фон</string>
+    <string name="tv_activity_graph_title_default_text">Ежедневная активность.</string>
+    <string name="iv_DaCoin_icon_contentDescription">Иконка DACoin</string>
+    <string name="tv_activity_DaCoin_count_default_text">12 345 678</string>
+    <string name="tv_top_week_day_monday_title_text">Пн</string>
+    <string name="tv_top_week_day_tuesday_title_text">Вт</string>
+    <string name="tv_top_week_day_wednesday_title_text">Ср</string>
+    <string name="tv_top_week_day_thursday_title_text">Чт</string>
+    <string name="tv_top_week_day_friday_title_text">Пт</string>
+    <string name="tv_top_week_day_saturday_title_text">Сб</string>
+    <string name="tv_top_week_day_sunday_title_text">Вс</string>
+    <string name="tv_top_week_count_title_text">№</string>
+    <string name="tv_bottom_comment_title_text">Правила определения активности</string>
+    <string name="tv_bottom_legend_less_title_text">Мало</string>
+    <string name="tv_bottom_legend_more_title_text">Много</string>
+    <string name="tv_header_title_default_text">Активность и достижения</string>
+    <string name="tv_period_default_text">Декабрь 2021</string>
+    <string name="tv_count_DACoin_title_text">Заработано DACoin</string>
+    <string name="iv_DACoin_icon_contentDescription">Иконка DACoin</string>
+    <string name="tv_DACoin_count_default_text">123 456</string>
+    <string name="nav_list_of_books_contentDescription">Список книг с возможностью сортировки</string>
+    <string name="nav_list_of_books_title">Список книг</string>
+    <string name="nav_summary_statistics_contentDescription">Совокупная статистика пользовательской активности</string>
+    <string name="nav_summary_statistics_title">Статистика пользователя</string>
+    <string name="nav_settings_fragment_contentDescription">Настройки</string>
+    <string name="nav_settings_fragment_title">Настройки</string>
     <!-- end process reading fragment area-->
 </resources>
