Изм 1.19 Complex redesign UI (create Users fragments) - Создана базовая реализация фрагмента авторизации пользователя (шаблон) - создана базовая разметка для фрагмента авторизации пользователя -  создана ViewModel для фрагмента регистрации пользователя (шаблон) - Создана базовая реализация фрагмента регистрации пользователя (шаблон) - создана базовая разметка для фрагмента регистрации пользователя -  создана ViewModel для фрагмента регистрации пользователя (шаблон) -- Создана базовая реализация фрагмента списка пользователей (шаблон)  - создана базовая разметка для фрагмента списка пользователей  -  создана ViewModel для фрагмента списка пользователей (шаблон)  - откорректирован навигационный граф  - внесена корректировка в MainActivity.kt  - новые строки и значения отправлены в соответствующие ресурсы.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,5 +145,10 @@
     <string name="nav_settings_fragment_title">Настройки</string>
     <string name="nav_authorization_user_contentDescription">переход к форме авторизации пользователя</string>
     <string name="nav_authorization_user_title">Авторизация пользователя</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in_short">Войти</string>
+    <string name="action_sign_in">Войти</string>
+    <string name="nav_user_login_fragment_label">Авторизация пользователя</string>
     <!-- end process reading fragment area-->
 </resources>
