--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,5 +159,7 @@
     <string name="da_helper_text">поисковый запрос не сформирован</string>
     <string name="action_forgot_my_password">забыл пароль</string>
     <string name="nav_restoring_user_access_fragment_label">Восстановление доступа</string>
+    <string name="invalid_username">Некорректное имя пользователя</string>
+    <string name="invalid_password">Некорректный пароль</string>
     <!-- end process reading fragment area-->
 </resources>
