Изм 1.19.3 Complex redesign UI (create Users fragments) - продолжена работа над фрагментом авторизации - изменена разметка фрагмента восстановления доступа - изменена разметка и налажена связь с VM фрагмента регистрации

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,5 +161,7 @@
     <string name="nav_restoring_user_access_fragment_label">Восстановление доступа</string>
     <string name="invalid_username">Некорректное имя пользователя</string>
     <string name="invalid_password">Некорректный пароль</string>
+    <string name="action_restoring_user_access">Восстановить доступ</string>
+    <string name="restore_accaunt_instruction_text">Укажите правильно ваш логин, и по нажатии кнопки восстановления доступа на указанный в учетных данных пользователя основной адрес электронной почты будет выслано письмо со ссылкой на сброс пароля. В ближайшее время проверьте ваш электронный почтовый ящик, перейдите по ссылке, придумайте и введите новый пароль и попытайтесь авторизоваться снова.</string>
     <!-- end process reading fragment area-->
 </resources>
