Изм 1.19.4 Complex redesign UI (restore User access fragments) - реализована динаимческая отправка запросов на определение наличия искомого пользователя лоя восстановления пароля. - изменен интерфейс ответа, добавлен метод onFailure в котором передается код ошибки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,5 +163,6 @@
     <string name="invalid_password">Некорректный пароль</string>
     <string name="action_restoring_user_access">Восстановить доступ</string>
     <string name="restore_accaunt_instruction_text">Укажите правильно ваш логин, и по нажатии кнопки восстановления доступа на указанный в учетных данных пользователя основной адрес электронной почты будет выслано письмо со ссылкой на сброс пароля. В ближайшее время проверьте ваш электронный почтовый ящик, перейдите по ссылке, придумайте и введите новый пароль и попытайтесь авторизоваться снова.</string>
+    <string name="no_user_with_username">Пользователь с таким логином отсутствует</string>
     <!-- end process reading fragment area-->
 </resources>
